--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -30,6 +30,7 @@
   --color-destructive-foreground: hsl(var(--destructive-foreground));
 
   --color-border: hsl(var(--border));
+  --color-border-default: rgb(223, 223, 223);
   --color-input: hsl(var(--input));
   --color-ring: hsl(var(--ring));
 
